--- a/index.html
+++ b/index.html
@@ -5,23 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet/less" type="text/css" href="css/style.less">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@400;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet/less" type="text/css" href="css/style.less">
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <!--<style type="text/less">
-    @cyan-color: rgb(61, 184, 189);
-    @orange-color: #FFA151;
-    @white-color: white;
-    @roboto-font: 'Roboto', sans-serif;
-    </style>-->
-
-    <div class="styles" data-cyan="rgb(61, 184, 189)" data-orange="#FFA151"></div>
-
     <header class="header">
         <div class="wrapper">
             <div class="header__container">
@@ -29,17 +20,21 @@
                     <div class="burger-button"></div>
                 </div>
                 <div class="header__title">English for kids!</div>
-                <div class="header__play-mode-handler">
-                    <div class="toggleWrapper">
-                        <input type="checkbox" class="dn" id="play-handler" />
-                        <label for="play-handler" class="toggle">
-                            <span class="toggle__handler">
-                        </label>
-                        <div class="bear-body">
-                            <span class="eye left"></span>
-                            <span class="eye right"></span>
+                <div class="header__input-container">
+                    <p class="input-container__title input-container__title--active" id="train">TRAIN</p>
+                    <div class="header__play-mode-handler">
+                        <div class="toggleWrapper">
+                            <input type="checkbox" class="dn" id="play-handler" />
+                            <label for="play-handler" class="toggle">
+                                <span class="toggle__handler">
+                            </label>
+                            <div class="bear-body">
+                                <span class="eye left"></span>
+                                <span class="eye right"></span>
+                            </div>
                         </div>
                     </div>
+                    <p class="input-container__title" id="play">PLAY</p>
                 </div>
             </div>
             <div id="popup-container" class="header__popup-menu hidden--translate">
@@ -53,26 +48,7 @@
     <main class="main">
         <div class="wrapper">
             <ul class="card-list" id="main-card-container">
-                <table class="card-list__table">
-                    <tr class="card-list__table-row">
-                        <td class="card-list__table-data">2</td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                    </tr>
-                    <tr class="card-list__table-row">
-                        <td class="card-list__table-data">2</td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                        <td class="card-list__table-data"></td>
-                    </tr>
-                </table>
+
             </ul>
         </div>
     </main>
@@ -88,17 +64,23 @@
 
 
 
-
-<!--
-<div class="card-list__game-result">
-                    <p class="game-result__description">You made 18 mistakes :(</p>
-                    <img src="assets/img/cry-parry.jpg" alt="" class="game-result__image">
-                </div>
--->
-
-<!--
-<div class="card-list__game-result">
-                    <p class="game-result__description">Excellent :)</p>
-                    <img src="assets/img/cool-parry.jpg" alt="" class="game-result__image">
-                </div>
--->
+<!--<table class="card-list__table">
+                    <tr class="card-list__table-row">
+                        <td class="card-list__table-data">2</td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                    </tr>
+                    <tr class="card-list__table-row">
+                        <td class="card-list__table-data">2</td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                        <td class="card-list__table-data"></td>
+                    </tr>
+                </table>-->
