--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
     <link rel="stylesheet/less" type="text/css" href="css/style.less">
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
-    <title>Document</title>
+    <title>English for kids</title>
 </head>
 
 <body>
